--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 version=1.0.8-SNAPSHOT
 group=ember.algo.sample
-emberdir=D:/COdltix-ember-1.9.51
+emberdir=D:/CODE/deltix-aglo-sample-dev/deltix-ember-1.9.51
