--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation "deltix.qsrv:deltix-commons-lang:$quantServerCommonsVersion"
     implementation "deltix.qsrv:deltix-timebase-api-messages:5.4.80"
 
+    implementation 'com.epam.deltix:dfp:0.11.26'
     // We need this if we want to Run/Debug algo from this project
     runtime  "deltix:deltix-ember-app:$emberVersion"
 
