--- a/deltix-ember-1.10.15/ember.conf
+++ b/deltix-ember-1.10.15/ember.conf
@@ -13,8 +13,8 @@ connectors {
     SIM: ${sim}
 }
 algorithms {  
-  ICEBERG: ${template.algorithm.default} {
-    factory = "deltix.ember.samples.algorithm.iceberg.IcebergAlgorithmFactory"
+  TWAP: ${template.algorithm.default} {
+    factory = "deltix.ember.samples.algorithm.twap.TwapSampleAlgorithmFactory"
     settings {
         defaultOrderDestination = "SIM"
     }
