--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 version=1.10.0-SNAPSHOT
 group=ember.algo.sample
-emberdir=D:/CODE/deltix-aglo-sample-dev/deltix-ember-1.10.15
+emberdir=F:/CODE/sample/deltix-aglo-sample-dev/deltix-ember-1.10.15
 docker.dockerCommonPath=/custom.docker/
